fetched data successfully using get request

--- a/src/webparts/helloWorld/HelloWorldWebPart.module.scss
+++ b/src/webparts/helloWorld/HelloWorldWebPart.module.scss
@@ -32,3 +32,19 @@
     }
   }
 }
+
+.table1 {
+  border-collapse: collapse;
+  width: 70%;
+}
+
+.th1 {
+  border: 2px solid black;
+  padding: 8px;
+  text-align: center;
+}
+.td1{
+  border: 2px solid black;
+  padding: 8px;
+  text-align: center;
+}
